--- a/docs/inf04/02220622.md
+++ b/docs/inf04/02220622.md
@@ -5,7 +5,7 @@
 ![2](/0222062022/2.png)
 ![3](/0222062022/3.png)
 ![4](/0222062022/4.png)
-
+![5](/0222062022/5.png)
 :::
 
 ## Aplikacja konsolowa
@@ -34,8 +34,103 @@ class Osoba:
 
 ## Aplikacja webowa
 
-_coming soon_
+::: tip Porada
+Przed rozpoczęciem pracy z plikiem App.js warto usunąć z niego niepotrzebny kod.
+:::
+```jsx
+// Plik App.js
+import "./App.css";
 
+function App() {
+  return <div className="App">
+
+  </div>;
+}
+
+export default App;
+```
+
+Na egzaminie zawodowym większość zadania skupiała się będzie na pliku App.js i to w nim należy pracować.
+```jsx
+// Plik App.js
+import "./App.css";
+import { useState } from "react"; // Importujemy useState
+
+function App() {
+  const kursy = [
+    "Programowanie w C#",
+    "Angular dla początkujących",
+    "Kurs Django",
+  ]; // Tablica zawierająca 3 kursy
+
+  const [imie, setImie] = useState(""); // State do inputu z imieniem
+  const [kurs, setKurs] = useState(); // State do inputu z numerem kursu
+
+  function handleSubmit(e) { // Funkcja wywołana po wysłaniu formularza
+    e.preventDefault(); // Blokujemy odświeżenie strony po przesłaniu formularza
+
+    console.log(imie);
+    if (kursy[kurs - 1]) {
+      console.log(kursy[kurs - 1]);
+    } else {
+      console.log("Nieprawidłowy numer kursu");
+    }
+  }
+
+  return (
+    <div className="App">
+      <h2>Liczba kursów {kursy.length}</h2> {/* Wypisujemy liste kursów */}
+
+      <ol>
+        {kursy.map((kurs) => (
+          <li key={kurs}>{kurs}</li> // Wypisanie elementów tablicy "kursy" za pomocą metody .map()
+        ))}
+      </ol>
+
+      <form onSubmit={handleSubmit}> {/* Formularz, który po przesłaniu wywołuje funkcję handleSubmit() */}
+        <div className="form-group">
+          <label htmlFor="imieInput">Imię i nazwisko:</label>
+          <input
+            type="text"
+            className="form-control"
+            id="imieInput"
+            value={imie} // Przypisanie state "imie" do wartosci inputu
+            onChange={(e) => setImie(e.target.value)} // Zmiana wartości state "imie" 
+          />
+        </div>
+
+        <div className="form-group">
+          <label htmlFor="kursInput">Numer kursu:</label>
+          <input
+            type="text"
+            className="form-control"
+            id="kursInput"
+            value={kurs} // Przypisanie state "kurs" do wartości inputu
+            onChange={(e) => setKurs(e.target.value)} // Zmiana wartości state "kurs" 
+          />
+        </div>
+        <button className="btn btn-primary">Zapisz do kursu</button>
+      </form>
+    </div>
+  );
+}
+
+export default App;
+```
+
+
+
+```css
+/* Plik App.css */
+.App {
+  width: 60%; /* Ustawienie szerokości aplikacji na 60% body*/
+  margin: 0 auto; /* Wyśrodkowanie aplikacji */
+}
+```
+
+::: warning Uwaga
+Podany arkusz wykorzystuje biblioteke Bootstrap, aby jej używać należy dodać linijke `import "bootstrap/dist/css/bootstrap.css";` na górę pliku `index.js`.
+:::
 ## Testy
 
 Zadanie 1
