Add and edit content

--- a/docs/inf04/02sl2022.md
+++ b/docs/inf04/02sl2022.md
@@ -1,14 +1,15 @@
 # 02 | Sesja letnia 2022
 
 ::: details Arkusz
-![1](/0222062022/1.png)
-![2](/0222062022/2.png)
-![3](/0222062022/3.png)
-![4](/0222062022/4.png)
-![5](/0222062022/5.png)
+![1](/inf04/02sl2022/1.png)
+![2](/inf04/02sl2022/2.png)
+![3](/inf04/02sl2022/3.png)
+![4](/inf04/02sl2022/4.png)
+![5](/inf04/02sl2022/5.png)
 :::
 
 ## Aplikacja konsolowa
+
 
 ```py
 class Osoba:
@@ -34,25 +35,12 @@ class Osoba:
 
 ## Aplikacja webowa
 
-::: tip Porada
-Przed rozpoczęciem pracy z plikiem App.js warto usunąć z niego niepotrzebny kod.
-:::
+Jeśli chcesz wiedzieć jak utworzyć aplikacje React zajrzyj [tutaj](/inf04/aplikacjewebowe.md/#utworzenie-aplikacji).
+
+<CodeGroup>
+  <CodeGroupItem title="App.js">
+
 ```jsx
-// Plik App.js
-import "./App.css";
-
-function App() {
-  return <div className="App">
-
-  </div>;
-}
-
-export default App;
-```
-
-Na egzaminie zawodowym większość zadania skupiała się będzie na pliku App.js i to w nim należy pracować.
-```jsx
-// Plik App.js
 import "./App.css";
 import { useState } from "react"; // Importujemy useState
 
@@ -118,18 +106,21 @@ function App() {
 export default App;
 ```
 
+  </CodeGroupItem>
 
+  <CodeGroupItem title="App.css">
 
 ```css
-/* Plik App.css */
 .App {
   width: 60%; /* Ustawienie szerokości aplikacji na 60% body*/
   margin: 0 auto; /* Wyśrodkowanie aplikacji */
 }
 ```
+  </CodeGroupItem>
+</CodeGroup>
 
 ::: warning Uwaga
-Podany arkusz wykorzystuje biblioteke Bootstrap, aby jej używać należy dodać linijke `import "bootstrap/dist/css/bootstrap.css";` na górę pliku `index.js`.
+Podany arkusz wykorzystuje bibliotekę Bootstrap, aby jej używać należy dodać linijkę `import "bootstrap/dist/css/bootstrap.css";` na górę pliku `index.js`.
 :::
 ## Testy
 
