--- a/docs/inf04/02sl2022.md
+++ b/docs/inf04/02sl2022.md
@@ -10,7 +10,6 @@
 
 ## Aplikacja konsolowa
 
-
 ```py
 class Osoba:
     licznik = 0 # pole statyczne
@@ -35,7 +34,7 @@ class Osoba:
 
 ## Aplikacja webowa
 
-Jeśli chcesz wiedzieć jak utworzyć aplikacje React zajrzyj [tutaj](/inf04/aplikacjewebowe.md/#utworzenie-aplikacji).
+Jeśli chcesz wiedzieć jak utworzyć aplikację React zajrzyj [tutaj](/inf04/aplikacjewebowe.md/#utworzenie-aplikacji).
 
 <CodeGroup>
   <CodeGroupItem title="App.js">
@@ -54,7 +53,8 @@ function App() {
   const [imie, setImie] = useState(""); // State do inputu z imieniem
   const [kurs, setKurs] = useState(); // State do inputu z numerem kursu
 
-  function handleSubmit(e) { // Funkcja wywołana po wysłaniu formularza
+  function handleSubmit(e) {
+    // Funkcja wywołana po wysłaniu formularza
     e.preventDefault(); // Blokujemy odświeżenie strony po przesłaniu formularza
 
     console.log(imie);
@@ -67,15 +67,15 @@ function App() {
 
   return (
     <div className="App">
-      <h2>Liczba kursów {kursy.length}</h2> {/* Wypisujemy liste kursów */}
-
+      <h2>Liczba kursów {kursy.length}</h2> {/* Wypisujemy listę kursów */}
       <ol>
         {kursy.map((kurs) => (
           <li key={kurs}>{kurs}</li> // Wypisanie elementów tablicy "kursy" za pomocą metody .map()
         ))}
       </ol>
-
-      <form onSubmit={handleSubmit}> {/* Formularz, który po przesłaniu wywołuje funkcję handleSubmit() */}
+      <form onSubmit={handleSubmit}>
+        {" "}
+        {/* Formularz, który po przesłaniu wywołuje funkcję handleSubmit() */}
         <div className="form-group">
           <label htmlFor="imieInput">Imię i nazwisko:</label>
           <input
@@ -83,10 +83,9 @@ function App() {
             className="form-control"
             id="imieInput"
             value={imie} // Przypisanie state "imie" do wartosci inputu
-            onChange={(e) => setImie(e.target.value)} // Zmiana wartości state "imie" 
+            onChange={(e) => setImie(e.target.value)} // Zmiana wartości state "imie"
           />
         </div>
-
         <div className="form-group">
           <label htmlFor="kursInput">Numer kursu:</label>
           <input
@@ -94,7 +93,7 @@ function App() {
             className="form-control"
             id="kursInput"
             value={kurs} // Przypisanie state "kurs" do wartości inputu
-            onChange={(e) => setKurs(e.target.value)} // Zmiana wartości state "kurs" 
+            onChange={(e) => setKurs(e.target.value)} // Zmiana wartości state "kurs"
           />
         </div>
         <button className="btn btn-primary">Zapisz do kursu</button>
@@ -116,12 +115,14 @@ export default App;
   margin: 0 auto; /* Wyśrodkowanie aplikacji */
 }
 ```
+
   </CodeGroupItem>
 </CodeGroup>
 
 ::: warning Uwaga
-Podany arkusz wykorzystuje bibliotekę Bootstrap, aby jej używać należy dodać linijkę `import "bootstrap/dist/css/bootstrap.css";` na górę pliku `index.js`.
+Podany arkusz wykorzystuje bibliotekę Bootstrap, aby jej używać należy dodać linijkę `import "bootstrap/dist/css/bootstrap.css";` na górze pliku `index.js`.
 :::
+
 ## Testy
 
 Zadanie 1
