--- a/docs/inf04/02sl2022.md
+++ b/docs/inf04/02sl2022.md
@@ -120,7 +120,7 @@ export default App;
 </CodeGroup>
 
 ::: warning Uwaga
-Podany arkusz wykorzystuje bibliotekę Bootstrap, aby jej używać należy dodać linijkę `import "bootstrap/dist/css/bootstrap.css";` na górze pliku `index.js`.
+Podany arkusz wykorzystuje bibliotekę Bootstrap, aby jej używać należy dodać linijkę `import "bootstrap/dist/css/bootstrap.css";` na górze pliku `index.js`. (Biblioteka będzie zainstalowana na egzaminie, na swoim komputerze musisz ją pobrać za pomocą komendy `npm i bootstrap`)
 :::
 
 ## Testy
